--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,3 +1,21 @@
+#spring.data.mongodb.uri= mongodb://drop_app:rpi_mongo_drop_app@192.168.0.10:27017/drop_app
+spring.data.mongodb.host=192.168.0.10
+spring.data.mongodb.port=27017
+spring.data.mongodb.username=drop_app
+spring.data.mongodb.password=rpi_mongo_drop_app
+spring.data.mongodb.authentication-database=drop_db
+spring.data.mongodb.database=drop_db
+spring.data.mongodb.grid-fs-database=drop_db
+
 spring.security.user.name=user
 spring.security.user.password=pass
 spring.security.user.roles=manager
+
+spring.servlet.multipart.max-file-size=256MB
+spring.servlet.multipart.max-request-size=256MB
+spring.servlet.multipart.enabled=true
+
+app.upload.dir = ./uploads/
+
+#db.createUser({ user: "admin", pwd: "rpi_admin", roles: [ { role: "userAdminAnyDatabase", db: "admin" } ] })
+#db.createUser({ user: "drop_app", pwd: "rpi_mongo_drop_app", roles: [{ role: "dbOwner", db: "drop_db" }] })
