--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.session.store-type=mongodb
 #spring.data.mongodb.uri= mongodb://drop_app:rpi_mongo_drop_app@192.168.0.10:27017/drop_app
 spring.data.mongodb.host=192.168.0.10
 spring.data.mongodb.port=27017
