--- a/server/pom.xml
+++ b/server/pom.xml
@@ -91,7 +91,7 @@
                     <finalName>Drop</finalName>
                 </configuration>
             </plugin>
-            <!--<plugin>
+            <plugin>
                 <artifactId>maven-clean-plugin</artifactId>
                 <configuration>
                     <filesets>
@@ -103,7 +103,7 @@
                         </fileset>
                     </filesets>
                 </configuration>
-            </plugin>-->
+            </plugin>
             <plugin>
                 <artifactId>maven-resources-plugin</artifactId>
                 <executions>
