--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -17,6 +17,7 @@ spring.servlet.multipart.max-request-size=256MB
 spring.servlet.multipart.enabled=true
 
 app.upload.dir = ./uploads/
+ftp.port=7788
 
 # http://localhost:8080/swagger-ui.html
 # http://localhost:8080/v2/api-docs
