--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -19,6 +19,10 @@ spring.servlet.multipart.enabled=true
 app.upload.dir = ./uploads/
 ftp.port=7788
 
+# jwt Properties
+app.jwtSecret= bezKoderSecretKey
+app.jwtExpirationMs= 86400000
+
 # http://localhost:8080/swagger-ui.html
 # http://localhost:8080/v2/api-docs
 #db.createUser({ user: "admin", pwd: "rpi_admin", roles: [ { role: "userAdminAnyDatabase", db: "admin" } ] })
