use interfaces and adding postman tests

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.session.store-type=mongodb
 #spring.data.mongodb.uri= mongodb://drop_app:rpi_mongo_drop_app@192.168.0.10:27017/drop_app
 spring.data.mongodb.host=192.168.0.10
+#spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.username=drop_app
 spring.data.mongodb.password=rpi_mongo_drop_app
@@ -16,12 +17,12 @@ spring.servlet.multipart.max-file-size=256MB
 spring.servlet.multipart.max-request-size=256MB
 spring.servlet.multipart.enabled=true
 
-app.upload.dir = ./uploads/
+ftp.upload.dir = ./uploads/
 ftp.port=7788
 
 # jwt Properties
-app.jwtSecret= bezKoderSecretKey
-app.jwtExpirationMs= 86400000
+app.jwtSecret= jw1Secre1@KeyD0p3a99
+app.jwtExpirationMinute= 5
 
 # http://localhost:8080/swagger-ui.html
 # http://localhost:8080/v2/api-docs
