add http range header support and uploading by chunks

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.session.store-type=mongodb
 #spring.data.mongodb.uri= mongodb://drop_app:rpi_mongo_drop_app@192.168.0.10:27017/drop_app
-spring.data.mongodb.host=192.168.0.10
-#spring.data.mongodb.host=localhost
+#spring.data.mongodb.host=192.168.0.10
+spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
-spring.data.mongodb.username=drop_app
-spring.data.mongodb.password=rpi_mongo_drop_app
-spring.data.mongodb.authentication-database=drop_db
+#spring.data.mongodb.username=drop_app
+#spring.data.mongodb.password=rpi_mongo_drop_app
+#spring.data.mongodb.authentication-database=drop_db
 spring.data.mongodb.database=drop_db
 spring.data.mongodb.grid-fs-database=drop_db
 
